--- a/.github/workflows/docker-webdriver.yml
+++ b/.github/workflows/docker-webdriver.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
 
     jobs:
-      Run_test:
+      RandoomJobName:
         runs-on: ubuntu-latest
         
         steps:
