--- a/.github/workflows/docker-webdriver.yml
+++ b/.github/workflows/docker-webdriver.yml
@@ -25,44 +25,37 @@ jobs:
             run: docker-compose -f ./selenium-4-grid.yml up -d
           - name: run wdio test
             run: npm run wdio
-          - name: Get Allure history
-            uses: actions/checkout@v2
-            if: always()
-            continue-on-error: true
-            with:
-              ref: gh-pages
-              path: gh-pages
-          - name: Generate allure report
-            uses: simple-elf/allure-report-action@master
-            if: always()
-            id: allure-report
-            with:
-              allure_results:   allure-results
-              gh_pages: gh-pages
-              allure_report: allure-report
-              allure_history: allure-history
-              keep_reports: 20
-          - name: Deploy report to Github Pages
-            if: always()
-            uses: peaceiris/actions-gh-pages@v2
-            env:
-              PERSONAL_TOKEN: ${{ secrets.WDIO_TOKEN }}
-              PUBLISH_BRANCH: gh-pages
-              PUBLISH_DIR: allure-history
-          - name: Post the link to the report
-            if: always()
-            uses: Sibz/github-status-action@v1
-            with:
-              authToken: ${{secrets.WDIO_TOKEN}}
-              context: 'Test report'
-              state: 'success'
-              sha: ${{ github.event.pull_request.head.sha }}
-              target_url: https://cloudinary.github.io/wdio-allure-ts/${{ github.run_number }}/index.html
-
-          - uses: sonots/slack-notice-action@v3
-            with:
-              status: ${{ job.status }}
-            env:
-              GITHUB_TOKEN: ${{ secrets.WDIO_TOKEN }}
-              SLACK_WEBHOOK_URL: ${{ secrets.SLACK_BOT_NOTIFICATION }}
-            if: always()
+          - name: Copy backupHistory
+      if: always()
+      # trying to save history screens and info of previous runs if it is exists
+      run: cp -r $(pwd)/docs/backupHistory/. $(pwd)/allure-results
+    - name: Create Report
+      if: always()
+      # trying to save history of previous runs if it is exists
+      run: cp -r $(pwd)/docs/history/. $(pwd)/allure-results/history || true && npm run allure:generate
+    - name: Create backup directory
+      if: always()
+      # trying to create backup directory
+      run: mkdir allure-report/backupHistory 
+    - name: Backup history tests
+      if: always()
+      # trying to backup screens and info test
+      run: cp -r $(pwd)/allure-results/*.* $(pwd)/allure-report/backupHistory
+    - name: Display structure of backup history files
+      if: always()
+      run: ls -R
+      working-directory: allure-report/backupHistory
+    - name: Upload artifact allure-report
+      uses: actions/upload-artifact@v1
+      if: always()
+      with:
+        name: allure-report
+        path: ./allure-report
+    - name: Deploy report
+      uses: JamesIves/github-pages-deploy-action@3.1.0
+      if: always()
+      with:
+        ACCESS_TOKEN: ${{'secrets.ACCESS_TOKEN'}}
+        BRANCH: master # The branch the action should deploy to.
+        FOLDER: allure-report # The folder the action should deploy.
+        TARGET_FOLDER: docs
