--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@wdio/spec-reporter": "^7.25.1",
         "chromedriver": "^106.0.1",
         "wdio-chromedriver-service": "^8.0.0",
+        "wdio-docker-service": "^3.2.1",
         "wdio-wait-for": "^2.2.6"
     },
     "scripts": {
