--- a/.github/workflows/docker-webdriver.yml
+++ b/.github/workflows/docker-webdriver.yml
@@ -25,20 +25,29 @@ jobs:
             run: docker-compose -f ./selenium-4-grid.yml up -d
           - name: run wdio test
             run: npm run wdio
-          - name: Create Report
+          - name: Get Allure history
+            uses: actions/checkout@v2
             if: always()
-            run: npm run allure:generate
-          - name: Upload artifact allure-report
-            uses: actions/upload-artifact@v1
-            if: always()
+            continue-on-error: true
             with:
-              name: allure-report
-              path: ./allure-report
-          - name: Deploy report
-            uses: JamesIves/github-pages-deploy-action@3.1.0
+              ref: gh-pages
+              path: gh-pages
+
+          - name: Generate allure report
+            uses: simple-elf/allure-report-action@master
             if: always()
+            id: allure-report
             with:
-              ACCESS_TOKEN: ${{'secrets.ACCESS_TOKEN'}}
-              BRANCH: master # The branch the action should deploy to.
-              FOLDER: allure-report # The folder the action should deploy.
-              TARGET_FOLDER: docs
+              allure_results:   allure-results
+              gh_pages: gh-pages
+              allure_report: allure-report
+              allure_history: allure-history
+              keep_reports: 20
+
+          - name: Deploy report to Github Pages
+            if: always()
+            uses: peaceiris/actions-gh-pages@v2
+            env:
+              PERSONAL_TOKEN: ${{ secrets.WDIO_TOKEN }}
+              PUBLISH_BRANCH: gh-pages
+              PUBLISH_DIR: allure-history
