--- a/.github/workflows/docker-webdriver.yml
+++ b/.github/workflows/docker-webdriver.yml
@@ -44,10 +44,17 @@ jobs:
               allure_history: allure-history
               keep_reports: 20
 
-          - name: Deploy report to Github Pages
+          - name: Upload artifact allure-report
+            uses: actions/upload-artifact@v1
             if: always()
-            uses: peaceiris/actions-gh-pages@v2
-            env:
-              PERSONAL_TOKEN: ${{ secrets.WDIO_TOKEN }}
-              PUBLISH_BRANCH: gh-pages
-              PUBLISH_DIR: allure-history
+            with:
+              name: allure-report
+              path: ./allure-report
+          - name: Deploy report
+            uses: JamesIves/github-pages-deploy-action@3.1.0
+            if: always()
+            with:
+              ACCESS_TOKEN: ${{'secrets.ACCESS_TOKEN'}}
+              BRANCH: master # The branch the action should deploy to.
+              FOLDER: allure-report # The folder the action should deploy.
+              TARGET_FOLDER: docs
