--- a/.github/workflows/docker-webdriver.yml
+++ b/.github/workflows/docker-webdriver.yml
@@ -5,7 +5,7 @@ on:
         branches: [master]
 jobs:
     Run_test:
-        runs-on: ubuntu-latest
+        runs-on: windows-latest
         strategy:
             matrix:
                 node-version: [14.17.0]
@@ -38,7 +38,7 @@ jobs:
             if: always()
             id: allure-report
             with:
-              allure_results:   allure-results
+              allure_results: allure-results
               gh_pages: gh-pages
               allure_report: allure-report
               allure_history: allure-history
