--- a/.github/workflows/docker-webdriver.yml
+++ b/.github/workflows/docker-webdriver.yml
@@ -36,28 +36,21 @@ jobs:
               ref: gh-pages
               path: gh-pages
 
-          - name: Generate allure report
+          - name: Allure Report action from marketplace
             uses: simple-elf/allure-report-action@master
             if: always()
-            id: allure-report
+            #id: allure-report
             with:
               allure_results: allure-results
-              gh_pages: gh-pages
-              allure_report: allure-report
+              #gh_pages: gh-pages
+              #allure_report: allure-report
               allure_history: allure-history
               keep_reports: 20
 
-          - name: Upload artifact allure-report
-            uses: actions/upload-artifact@v1
+          - name: Deploy report to Github Pages
             if: always()
-            with:
-              name: allure-report
-              path: ./allure-report
-          - name: Deploy report
-            uses: JamesIves/github-pages-deploy-action@3.1.0
-            if: always()
-            with:
-              ACCESS_TOKEN: ${{'secrets.ACCESS_TOKEN'}}
-              BRANCH: master # The branch the action should deploy to.
-              FOLDER: allure-report # The folder the action should deploy.
-              TARGET_FOLDER: docs
+            uses: peaceiris/actions-gh-pages@v2
+            env:
+              PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+              PUBLISH_BRANCH: gh-pages
+              PUBLISH_DIR: allure-history
